--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,6 +10,8 @@ leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_actix = { workspace = true, optional = true }
+# styled.workspace = true
+# stylist.workspace = true
 
 http.workspace = true
 cfg-if.workspace = true
