--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ leptos_router = { version = "0.4", features = ["nightly"] }
 leptos_actix = { version = "0.4" }
 
 stylers = { git = "https://github.com/abishekatp/stylers.git", rev="1023730" }
-actix-web = { version = "4", features = ["macros"] }
+serde = "1"
+actix-web = { version = "4",  features = ["macros"] }
 actix-files = { version = "0.6" }
 cfg-if = "1.0.0"
 console_error_panic_hook = "0.1.7"
@@ -28,6 +29,7 @@ tokio = { version = "1.26.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.4.0", features = ["full"] }
 wasm-bindgen = "=0.2.87"
+web-sys = {version = "0.3.6", features = ["AbortController", "AbortSignal", "HtmlDocument"] }
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
 
