--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ leptos = { version = "0.4", features = ["nightly"] }
 leptos_meta = { version = "0.4", features = ["nightly"] }
 leptos_router = { version = "0.4", features = ["nightly"] }
 leptos_actix = { version = "0.4" }
-actix-web = { version = "4", features = ["macros"] }
+serde = "1"
+actix-web = { version = "4",  features = ["macros"] }
 actix-files = { version = "0.6" }
 cfg-if = "1.0.0"
 console_error_panic_hook = "0.1.7"
@@ -24,6 +25,7 @@ simple_logger = "4.2.0"
 thiserror = "1.0.48"
 tokio = { version = "1.32.0", features = ["full"] }
 wasm-bindgen = "=0.2.87"
+web-sys = {version = "0.3.6", features = ["AbortController", "AbortSignal", "HtmlDocument"] }
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
 
