Adds paning functionality to the board component

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2021"
 actix-web = { version = "4", optional = true, features = ["macros"] }
 actix-files = { version = "0.6", optional = true }
 leptos_actix = { version = "0.4", optional = true }
-leptos.workspace = true 
+leptos.workspace = true
+leptos-use.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
 serde.workspace = true
@@ -29,6 +30,7 @@ ssr = [
   "dep:actix-web",
   "dep:leptos_actix",
   "leptos/ssr",
+  "leptos-use/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
 ]
