--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ opt-level = 'z'
 
 [workspace.dependencies]
 leptos = { version = "0.4", features = ["nightly"] }
+leptos-use = "0.6"
 leptos_meta = { version = "0.4", features = ["nightly"] }
 leptos_router = { version = "0.4", features = ["nightly"] }
 leptos_actix = { version = "0.4" }
@@ -25,7 +26,7 @@ simple_logger = "4.2.0"
 thiserror = "1.0.48"
 tokio = { version = "1.32.0", features = ["full"] }
 wasm-bindgen = "=0.2.87"
-web-sys = {version = "0.3.6", features = ["AbortController", "AbortSignal", "HtmlDocument"] }
+web-sys = {version = "0.3.6", features = ["AbortController", "AbortSignal", "HtmlDocument", "SvgPoint","SvgsvgElement", "SvgGraphicsElement", "SvgMatrix"] }
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
 
