--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "playwright": "^1.37.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.37.1"
+    "@playwright/test": "^1.37.1",
+    "tailwindcss": "^3.3.3"
   }
 }
