--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,7 +11,11 @@ leptos = { workspace = true, features = [ "ssr" ]}
 leptos_actix.workspace = true
 
 actix-web.workspace = true
+actix-web-actors.workspace = true
 actix-files.workspace = true
+actix.workspace = true
+actix-rt.workspace = true
 simple_logger.workspace = true
 tokio.workspace = true
 log.workspace = true
+uuid.workspace = true
