--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ leptos_actix = { version = "0.4" }
 serde = "1"
 actix-web = { version = "4",  features = ["macros"] }
 actix-files = { version = "0.6" }
+actix-web-actors = { version  = "4.2.0" }
+actix = "0.13.1"
+actix-rt = "2.9.0"
 cfg-if = "1.0.0"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
@@ -27,6 +30,7 @@ thiserror = "1.0.48"
 tokio = { version = "1.32.0", features = ["full"] }
 wasm-bindgen = "=0.2.87"
 web-sys = {version = "0.3.6", features = ["AbortController", "AbortSignal", "HtmlDocument", "SvgPoint","SvgsvgElement", "SvgGraphicsElement", "SvgMatrix"] }
+uuid = { version = "1.4.1", features = ["v4", "wasm-bindgen", "serde"] }
 
 # See https://github.com/akesson/cargo-leptos for documentation of all the parameters.
 
