Upgrades to leptos 0.5.0-rc3

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,3 +19,4 @@ simple_logger.workspace = true
 tokio.workspace = true
 log.workspace = true
 uuid.workspace = true
+serde = { workspace = true, features = ["derive"] }
