--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.4", features = ["nightly"] }
-leptos-use = "0.6"
-leptos_meta = { version = "0.4", features = ["nightly"] }
-leptos_router = { version = "0.4", features = ["nightly"] }
-leptos_actix = { version = "0.4" }
-serde = "1"
+leptos = { version = "0.5.0-rc3", features = ["nightly"] }
+leptos-use = { git = "https://github.com/Synphonyte/leptos-use/", branch = "main" }
+leptos_meta = { version = "0.5.0-rc3", features = ["nightly"] }
+leptos_router = { version = "0.5.0-rc3", features = ["nightly"] }
+leptos_actix = { version = "0.5.0-rc3" }
+serde = { version = "1", feature = [""]}
 actix-web = { version = "4",  features = ["macros"] }
 actix-files = { version = "0.6" }
 actix-web-actors = { version  = "4.2.0" }
