--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="postgres://hive-dev@localhost:/hive-local"
 TEST_DATABASE_URL="postgres://hive-dev@localhost:/hive-test"
+COOKIE_SECRET_KEY="top level"
