--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ actix-rt = "2.9.0"
 actix-identity = { version = "0.6" }
 actix-session = { version = "0.8", features = ["cookie-session"] }
 argon2 = "0.5"
+sha2 = "0.10"
 serde = { version = "1", feature = [""]}
 cfg-if = "1.0.0"
 console_error_panic_hook = "0.1.7"
@@ -52,7 +53,7 @@ chrono = { version = "0.4", features = ["serde"] }
 # that are used together frontend (lib) & server (bin)
 [[workspace.metadata.leptos]]
 # this name is used for the wasm, js and css file names
-name = "start-actix-workspace"
+name = "HiveGame"
 
 # the package in the workspace that contains the server binary (binary crate)
 bin-package = "server"
