--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ lto = true
 opt-level = 'z'
 
 [workspace.dependencies]
-leptos = { version = "0.5.0-rc3", features = ["nightly"] }
-leptos-use = { git = "https://github.com/Synphonyte/leptos-use/", branch = "main" }
-leptos_meta = { version = "0.5.0-rc3", features = ["nightly"] }
-leptos_router = { version = "0.5.0-rc3", features = ["nightly"] }
-leptos_actix = { version = "0.5.0-rc3" }
+leptos = { version = "0.5", features = ["nightly"] }
+leptos-use = { version = "0.7" }
+leptos_meta = { version = "0.5", features = ["nightly"] }
+leptos_router = { version = "0.5", features = ["nightly"] }
+leptos_actix = { version = "0.5" }
 actix-web = { version = "4",  features = ["macros"] }
 actix-files = { version = "0.6" }
 actix-web-actors = { version  = "4.2.0" }
