--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -25,6 +25,8 @@ thiserror.workspace = true
 uuid.workspace = true
 cookie.workspace = true
 rand_core.workspace = true
+rand.workspace = true
+chrono.workspace = true
 hive = { path = "../engine" }
 db = { path = "../db", optional = true }
 
