Fixes deploy to use db

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,6 +18,8 @@ actix-rt.workspace = true
 actix-session.workspace = true
 actix-web.workspace = true
 actix-web-actors.workspace = true
+diesel.workspace = true
+diesel_migrations.workspace = true
 simple_logger.workspace = true
 tokio.workspace = true
 log.workspace = true
