Removes leptos_query/ssr feature => fixes errors

--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -44,7 +44,7 @@ web-sys.workspace = true
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate",]
+hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_query/hydrate"]
 ssr = [
   "dep:actix",
   "dep:actix-files",
@@ -62,7 +62,6 @@ ssr = [
   "leptos-use/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
-  "leptos_query/ssr",
 ]
 
 [package.metadata.leptos]
