--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -75,6 +75,8 @@ site-pkg-dir = "pkg"
 # The tailwind input file.
 # Optional, Activates the tailwind build
 tailwind-input-file = "style/tailwind.css"
+# This style file is needed due to a bug with hot reload, and tailwind
+style-file = "style/main.scss"
 # Assets source dir. All files found here will be copied and synchronized to site-root.
 # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
 #
