--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ leptos-use = { version = "0.7" }
 leptos_meta = { version = "0.5", features = ["nightly"] }
 leptos_router = { version = "0.5", features = ["nightly"] }
 leptos_actix = { version = "0.5" }
+leptos_icons = { version = "0.1", default_features = false, features = [
+    "AiFastBackwardFilled",
+    "AiStepBackwardFilled",
+    "AiFastForwardFilled",
+    "AiStepForwardFilled"
+] }
 actix-web = { version = "4",  features = ["macros"] }
 actix-files = { version = "0.6" }
 actix-web-actors = { version  = "4.2.0" }
