--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -67,6 +67,8 @@ ssr = [
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
 output-name = "HiveGame"
+# Fixes incremental compile bug: https://github.com/leptos-rs/cargo-leptos/pull/203
+separate-front-target-dir = true
 # The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
 site-root = "target/site"
 # The site-root relative folder where all compiled output (JS, WASM and CSS) is written
