--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ actix-identity = { version = "0.6" }
 actix-session = { version = "0.8", features = ["cookie-session"] }
 argon2 = "0.5"
 sha2 = "0.10"
-serde = { version = "1", feature = [""]}
+serde = { version = "1", feature = ["derive"] }
+serde_json = { version = "1" }
 cfg-if = "1.0.0"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
