Fleshes out player profiles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ leptos_icons = { version = "0.1", default_features = false, features = [
     "AiStepBackwardFilled",
     "AiFastForwardFilled",
     "AiStepForwardFilled",
-    "BiInfiniteRegular"
+    "BiInfiniteRegular",
+    "RiSwordOthersLine"
 ] }
 actix-web = { version = "4",  features = ["macros"] }
 actix-files = { version = "0.6" }
