--- a/db/diesel.toml
+++ b/db/diesel.toml
@@ -1,5 +1,6 @@
 [print_schema]
 file = "src/schema.rs"
-
+generate_missing_sql_type_definitions = true
+custom_type_derives = ["diesel::query_builder::QueryId"]
 [migrations_directory]
 dir = "migrations"
