--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -34,6 +34,7 @@ log.workspace = true
 rand.workspace = true
 rand_core.workspace = true
 serde = { workspace = true, features = ["derive"] }
+http-serde = { workspace = true }
 serde_json = { workspace = true }
 sha2.workspace = true
 simple_logger.workspace = true
