Adds table to display games, fixes styles, imporves header

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,11 @@ leptos_icons = { version = "0.1", default_features = false, features = [
     "AiStepForwardFilled",
     "BiInfiniteRegular",
     "BiUndoRegular",
+    "BsHexagon",
+    "BsHexagonFill",
+    "BsHexagonHalf",
     "ChCross",
+    "ChMenuHamburger",
     "FaHandshakeSimpleSolid",
     "RiSwordOthersLine"
 ] }
