--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ http = "0.2.9"
 log = "0.4.20"
 simple_logger = "4.2.0"
 thiserror = "1"
+anyhow = "1"
 tokio = { version = "1.32.0", features = ["full"] }
 wasm-bindgen = "0.2.88"
 web-sys = {version = "0.3.6", features = ["AbortController", "AbortSignal", "Clipboard", "HtmlDocument", "SvgPoint","SvgsvgElement", "SvgGraphicsElement", "SvgMatrix"] }
