--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ serde_json = { version = "1" }
 cfg-if = "1.0.0"
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
+regex = "1.10"
 http = "0.2.9"
 log = "0.4.20"
 simple_logger = "4.2.0"
