--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -33,6 +33,8 @@ leptos_icons.workspace = true
 log.workspace = true
 rand.workspace = true
 rand_core.workspace = true
+regex.workspace = true
+lazy_static.workspace = true
 serde = { workspace = true, features = ["derive"] }
 http-serde = { workspace = true }
 serde_json = { workspace = true }
