--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["apis", "engine", "db"]
+members = ["apis", "engine", "db", "shared_types"]
 resolver = "2"
 
 # need to be applied only to wasm build
