Removes placeholders, improves css, fixes autofocus

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ leptos_icons = { version = "0.1", default_features = false, features = [
     "AiStepBackwardFilled",
     "AiFastForwardFilled",
     "AiStepForwardFilled",
+    "AiMailOutlined",
     "BiInfiniteRegular",
     "BiUndoRegular",
     "BiCircleRegular",
@@ -29,6 +30,7 @@ leptos_icons = { version = "0.1", default_features = false, features = [
     "BsHexagon",
     "BsHexagonFill",
     "BsHexagonHalf",
+    "BiStopwatchRegular",
     "ChCross",
     "ChMenuHamburger",
     "FaHandshakeSimpleSolid",
