Adds rudimentary analysis board

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ leptos_meta = { version = "0.5", features = ["nightly"] }
 leptos_router = { version = "0.5", features = ["nightly"] }
 leptos_actix = { version = "0.5" }
 leptos_icons = { version = "0.1", default_features = false, features = [
+    "TbMicroscope",
     "AiCopyOutlined",
     "AiFlagOutlined",
     "AiFastBackwardFilled",
