--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -31,6 +31,7 @@ leptos_actix = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
 leptos_icons.workspace = true
+icondata.workspace = true
 log.workspace = true
 rand.workspace = true
 rand_core.workspace = true
