--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -29,3 +29,5 @@ hive = { path = "../engine/" }
 skillratings.workspace = true
 chrono.workspace = true
 shared_types = { path = "../shared_types/" }
+lazy_static.workspace = true
+regex.workspace = true
