--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,5 @@
-# fly.toml app configuration file generated for buggyleptosarena on 2023-09-09T17:58:18+03:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
 
-app = "buggyleptosarena"
+app = "hivegame"
 primary_region = "otp"
 
 [build]
