fix all clippy warnings

--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -10,3 +10,4 @@ thiserror = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 uuid = { workspace = true }
 chrono = { workspace = true }
+hive = { path = "../engine" }
