--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -15,39 +15,39 @@ actix-web = { workspace = true, optional = true, features = ["macros"] }
 actix-web-actors = { workspace = true, optional = true }
 actix = { workspace = true, optional = true }
 argon2 = { workspace = true, optional = true }
-cfg-if.workspace = true
-chrono.workspace = true
-console_error_panic_hook.workspace = true
-cookie.workspace = true
+cfg-if = { workspace = true }
+chrono = { workspace = true }
+console_error_panic_hook = { workspace = true }
+cookie = { workspace = true }
 db = { path = "../db", optional = true  }
 diesel = { workspace = true, optional = true }
 diesel_migrations = { workspace = true, optional = true }
 hive = { path = "../engine" }
 shared_types = { path = "../shared_types" }
-http.workspace = true
+http = { workspace = true }
 leptos = { workspace = true }
-leptos-use.workspace = true
+leptos-use = { workspace = true }
 leptos_actix = { workspace = true, optional = true }
-leptos_meta.workspace = true
-leptos_router.workspace = true
-leptos_icons.workspace = true
-icondata.workspace = true
-log.workspace = true
-rand.workspace = true
-rand_core.workspace = true
-regex.workspace = true
-lazy_static.workspace = true
+leptos_meta = { workspace = true }
+leptos_router = { workspace = true }
+leptos_icons = { workspace = true }
+icondata = { workspace = true }
+log = { workspace = true }
+rand = { workspace = true }
+rand_core = { workspace = true }
+regex = { workspace = true }
+lazy_static = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 http-serde = { workspace = true }
 serde_json = { workspace = true }
-sha2.workspace = true
-simple_logger.workspace = true
-thiserror.workspace = true
-anyhow.workspace = true
+sha2 = { workspace = true }
+simple_logger = { workspace = true }
+thiserror = { workspace = true }
+anyhow = { workspace = true }
 tokio = { workspace = true, optional = true }
-uuid.workspace = true
-wasm-bindgen.workspace = true
-web-sys.workspace = true
+uuid = { workspace = true }
+wasm-bindgen = { workspace = true}
+web-sys = { workspace = true }
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
