--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,21 +1,27 @@
 name: Playwright Tests
 on:
-  deployment_status:
+  workflow_run:
+    workflows: ["Deploy to Fly"]
+    types:
+      - completed
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    if: github.event.deployment_status.state == 'success'
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 22
     - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright
-      run: npx playwright install --with-deps
+      run: cd apis/end2end && npm ci
+    - name: Install Playwright Browsers
+      run: cd apis/end2end && npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test
-      env:
-        PLAYWRIGHT_TEST_BASE_URL: https://hivegame.fly.dev/
+      run: cd apis/end2end && npx playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: apis/end2end/playwright-report/
+        retention-days: 30
