--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -50,6 +50,9 @@ uuid = { workspace = true }
 wasm-bindgen = { workspace = true}
 web-sys = { workspace = true }
 leptix_primitives = {workspace = true}
+tree-ds = {workspace = true}
+bincode = {workspace = true}
+base64 = {workspace = true}
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
