use leptix primitives for sideboard

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ rand_core = "0.6"
 cookie = "0.18"
 skillratings = "0.26"
 chrono = { version = "0.4", features = ["serde"] }
-
+leptix_primitives = {git ="https://github.com/leptix/leptix.git" }
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
 inherits = "release"
