--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -48,7 +48,7 @@ tokio = { workspace = true, optional = true }
 uuid = { workspace = true }
 wasm-bindgen = { workspace = true}
 web-sys = { workspace = true }
-
+leptix_primitives = {workspace = true}
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
