One DbConn per request, handlers use transactions

--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -22,6 +22,7 @@ cookie = { workspace = true }
 db = { path = "../db", optional = true  }
 diesel = { workspace = true, optional = true }
 diesel_migrations = { workspace = true, optional = true }
+diesel-async = { workspace = true, optional = true }
 hive = { path = "../engine" }
 shared_types = { path = "../shared_types" }
 http = { workspace = true }
@@ -64,6 +65,7 @@ ssr = [
   "dep:db",
   "dep:diesel",
   "dep:diesel_migrations",
+  "dep:diesel-async",
   "dep:leptos_actix",
   "leptos/ssr",
   "leptos-use/ssr",
