Adds tournament status, exposes games and status in reposne

--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -11,3 +11,4 @@ serde = { workspace = true, features = ["derive"] }
 uuid = { workspace = true }
 chrono = { workspace = true }
 hive = { path = "../engine" }
+anyhow = { workspace = true }
