--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,11 +54,10 @@ rand_core = "0.6"
 cookie = "0.18"
 skillratings = "0.26"
 chrono = { version = "0.4", features = ["serde"] }
-tree-ds = { version = "0.1.4", features = ["serde"] }
-bincode = { version = "1.3.3"}
-base64 = { version = "0.22.1"}
-leptix_primitives = { version = "0.2.0" }
 itertools = "0.13.0"
+leptix_primitives = { version = "0.2.0" }
+tree-ds = {version = "0.1.5", features = ["serde", "compact_serde"] }
+bimap = {version = "0.6.3", features = ["serde"] }
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
 inherits = "release"
