--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ actix-identity = { version = "0.7" }
 actix-session = { version = "0.9", features = ["cookie-session"] }
 argon2 = "0.5"
 sha2 = "0.10"
-serde = { version = "1", feature = ["derive"] }
+serde = { version = "1" }
 serde_with = { version = "3.5" }
 http-serde = { version = "2" }
 serde_json = { version = "1" }
