--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,8 @@ thiserror = "1"
 anyhow = "1"
 tokio = { version = "1.35.1", features = ["full"] }
 wasm-bindgen = "0.2.92"
-web-sys = {version = "0.3.67", features = ["AbortController", "AbortSignal", "Blob", "Clipboard", "HtmlDocument", "SvgPoint", "SvgsvgElement", "SvgGraphicsElement", "SvgRect", "SvgMatrix", "Url", "Window"] }
+wasm-bindgen-futures = "0.4"
+web-sys = {version = "0.3.67", features = ["AbortController", "AbortSignal", "AudioContext", "AudioBuffer", "AudioBufferSourceNode", "AudioDestinationNode", "Blob", "Clipboard", "HtmlDocument", "SvgPoint", "SvgsvgElement", "SvgGraphicsElement", "SvgRect", "SvgMatrix", "Url", "Window"] }
 bb8 = { version = "0.8" }
 diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "serde_json"] }
 diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
