--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -48,6 +48,7 @@ anyhow = { workspace = true }
 tokio = { workspace = true, optional = true }
 uuid = { workspace = true }
 wasm-bindgen = { workspace = true}
+wasm-bindgen-futures = { workspace = true}
 web-sys = { workspace = true }
 leptix_primitives = {workspace = true}
 tree-ds = {workspace = true}
