--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -14,6 +14,7 @@ actix-rt = { workspace = true, optional = true }
 actix-session = { workspace = true, optional = true }
 actix-web = { workspace = true, optional = true, features = ["macros"] }
 actix-web-actors = { workspace = true, optional = true }
+actix-web-httpauth.workspace = true
 anyhow = { workspace = true }
 argon2 = { workspace = true, optional = true }
 bimap = {workspace = true}
